--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "xmldom": "^0.1.22",
     "lodash": "^4.15.0",
     "optimist": "^0.6.1",
-    "async": "^2.0.1"
+    "async": "^2.0.1",
+	"opentype.js": "^1.1.0",
+	"font-manager": "^0.3.0"
   },
   "devDependencies": {
   },
