--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf2json",
-  "version": "1.1.18",
+  "version": "1.1.19",
   "description": "A PDF file parser that converts PDF binaries to text based JSON, powered by porting a fork of PDF.JS to Node.js",
   "keywords": [
     "pdf",
@@ -37,12 +37,13 @@
     "pdf2json": "./bin/pdf2json"
   },
   "dependencies": {
-    "xmldom": "^0.1.22",
-    "lodash": "^4.15.0",
-    "optimist": "^0.6.1",
     "async": "^2.0.1",
+    "lodash": "^4.15.0",
     "opentype.js": "^1.1.0",
-    "system-font-families": "^0.4.1"
+    "optimist": "^0.6.1",
+    "system-font-families": "^0.4.1",
+    "ttfinfo": "^0.2.0",
+    "xmldom": "^0.1.22"
   },
   "devDependencies": {},
   "bundledDependencies": [
