--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
   },
   "dependencies": {
     "async": "^2.0.1",
+    "fontinfo": "^0.3.0",
     "lodash": "^4.15.0",
     "opentype.js": "^1.1.0",
     "optimist": "^0.6.1",
     "system-font-families": "^0.4.1",
-    "ttfinfo": "^0.2.0",
     "xmldom": "^0.1.22"
   },
   "devDependencies": {},
